<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E1DBDB"
    android:orientation="vertical"
    android:paddingTop="58dp"
    tools:context=".Fragments.MuseoFragment">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30sp"
        android:layout_marginTop="30sp"
        android:background="#BC1A0E"
        android:text="@string/museoTitulo"
        android:textAlignment="center"
        android:textColor="#FAF6F6"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:contentDescription="@string/museoTitulo"
        android:src="@drawable/mqoricancha" />

    <com.codesgood.views.JustifiedTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30sp"
        android:layout_marginTop="14sp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/museocon1"
        android:textSize="14sp" />

    <com.codesgood.views.JustifiedTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30sp"
        android:layout_marginTop="14sp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/museocon2"
        android:textSize="14sp" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30sp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/museodirecion"
        android:textAlignment="center"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30sp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/museoemail"
        android:textAlignment="center"
        android:textSize="14sp" />

</LinearLayout>