<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context=".Fragments.AcercadeFragment"
    android:paddingTop="58dp">

<TextView
    android:id="@+id/textView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="30sp"
    android:text="@string/acercaTitulo"
    android:textAlignment="center"
    android:textColor="#000000"
    android:textSize="30sp"
    android:textStyle="bold" />

<com.codesgood.views.JustifiedTextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="30sp"
    android:text="@string/acercaapp1"
    android:textSize="14sp" />

<com.codesgood.views.JustifiedTextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="30sp"
    android:layout_marginTop="14sp"
    android:text="@string/acercaapp2"
    android:textSize="14sp" />

</LinearLayout>